kanc/src/tests/sample_code/should_fail/single_file/type_check/illegal_type/fun_return.k
type U {
    .u: U,
}

let foo = fun foo_(x: U): U.u {
    U.u
};
